ajout d'une feuille de style et d'un logo

--- a/indexgit.html
+++ b/indexgit.html
@@ -5,14 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="stylegit.css">
     <title>Agence de voyage</title>
 </head>
 
 <body>
-    <div class="banniere">
-        <h1>Agence de voyage</h1>
-        <img class="imgbanniere" src="images/logo.png">
-    </div>
+    <h1>Agence de voyage</h1>
 </body>
 
 </html>
