--- a/indexgit.html
+++ b/indexgit.html
@@ -6,11 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="stylegit.css">
+    <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
     <title>Agence de voyage</title>
 </head>
 
 <body>
     <h1>Agence de voyage</h1>
+    <nav id="menu">
+    <ul>
+        <li class="item"><a href='station.php'>Afficher les stations</a></li>
+        <li class="item"><a href="#">Afficher les activités</a></li>
+        <li class="item"><a href="#">Afficher les séjours</a></li>
+        <li class="item"><a href="#">Afficher les clients</a></li>
+    </ul>
+</nav>
 </body>
 
 </html>
